--- a/core-build/gulp-core-build-serve/tsconfig.json
+++ b/core-build/gulp-core-build-serve/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
     "types": [
       "node"
+    ],
+    "lib": [
+      "es6"
     ]
   }
 }
