--- a/core-build/gulp-core-build-mocha/tsconfig.json
+++ b/core-build/gulp-core-build-mocha/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "jsx": "react",
     "declaration": true,
@@ -8,6 +8,9 @@
     "strictNullChecks": true,
     "types": [
       "node"
+    ],
+    "lib": [
+      "es6"
     ]
   }
 }
