--- a/webpack/loader-set-webpack-public-path/tsconfig.json
+++ b/webpack/loader-set-webpack-public-path/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "types": [],
+    "lib": [
+      "es6"
+    ]
   }
 }
