--- a/libraries/decorators/tsconfig.json
+++ b/libraries/decorators/tsconfig.json
@@ -9,9 +9,11 @@
     "experimentalDecorators": true,
     "strictNullChecks": true,
     "types": [
+      "node"
     ],
     "lib": [
-      "es6"
+      "es5",
+      "es2015.iterable"
     ]
   }
 }
