--- a/apps/rush/tsconfig.json
+++ b/apps/rush/tsconfig.json
@@ -9,10 +9,11 @@
     "outDir": "lib",
     "listFiles": false,
     "types": [
+      "node",
       "mocha"
     ],
     "lib": [
-      "es6",
+      "es5",
       "scripthost",
       "es2015.collection",
       "es2015.promise",
