--- a/libraries/api-documenter/tsconfig.json
+++ b/libraries/api-documenter/tsconfig.json
@@ -11,9 +11,10 @@
       "node"
     ],
     "lib": [
-      "es6",
+      "es5",
       "scripthost",
       "es2015.collection",
+      "es2015.iterable",
       "es2015.promise",
       "dom"
     ],
