--- a/libraries/decorators/package.json
+++ b/libraries/decorators/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@microsoft/node-library-build": "~4.0.7",
+    "@types/node": "6.0.88",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
     "chai": "~3.5.0",
