--- a/libraries/node-core-library/tsconfig.json
+++ b/libraries/node-core-library/tsconfig.json
@@ -10,10 +10,11 @@
       "node"
     ],
     "lib": [
-      "es6",
+      "es5",
       "scripthost",
       "es2015.collection",
       "es2015.promise",
+      "es2015.iterable",
       "dom"
     ],
     "strictNullChecks": true
