--- a/libraries/api-documenter/package.json
+++ b/libraries/api-documenter/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@microsoft/api-extractor": "3.4.2",
     "@microsoft/node-core-library": "~0.3.4",
+    "@microsoft/ts-command-line": "~2.1.0",
     "colors": "~1.1.2",
     "fs-extra": "~0.26.7",
     "js-yaml": "~3.9.1"
