--- a/libraries/api-extractor/package.json
+++ b/libraries/api-extractor/package.json
@@ -28,9 +28,11 @@
   },
   "dependencies": {
     "@microsoft/node-core-library": "~0.3.4",
+    "@microsoft/ts-command-line": "~2.1.0",
     "@types/fs-extra": "0.0.37",
     "@types/node": "6.0.88",
     "@types/z-schema": "3.16.31",
+    "colors": "~1.1.2",
     "fs-extra": "~0.26.7",
     "jju": "~1.3.0",
     "typescript": "~2.4.1",
