--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -15,7 +15,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "argparse": "~1.0.7",
+    "argparse": "~1.0.9",
+    "@types/argparse": "~1.0.33",
     "colors": "~1.1.2",
     "@types/node": "6.0.88"
   },
