--- a/core-build/gulp-core-build/package.json
+++ b/core-build/gulp-core-build/package.json
@@ -51,8 +51,8 @@
     "through2": "~2.0.1",
     "yargs": "~4.6.0",
     "z-schema": "~3.18.3",
-    "jest-cli": "^20.0.0",
-    "jest": "^20.0.0"
+    "jest-cli": "~20.0.4",
+    "jest": "~20.0.4"
   },
   "devDependencies": {
     "@types/z-schema": "3.16.31",
