--- a/libraries/api-documenter/package.json
+++ b/libraries/api-documenter/package.json
@@ -22,14 +22,11 @@
   },
   "devDependencies": {
     "@microsoft/node-library-build": "~4.1.2",
-    "@types/chai": "3.4.34",
     "@types/colors": "1.1.3",
     "@types/fs-extra": "0.0.37",
     "@types/js-yaml": "3.9.1",
-    "@types/mocha": "2.2.38",
     "@types/node": "6.0.88",
-    "chai": "~3.5.0",
     "gulp": "~3.9.1",
-    "mocha": "~3.4.2"
+    "@types/jest": "~20.0.4"
   }
 }
