--- a/libraries/api-documenter/tsconfig.json
+++ b/libraries/api-documenter/tsconfig.json
@@ -7,8 +7,12 @@
     "declaration": true,
     "sourceMap": true,
     "experimentalDecorators": true,
+    "skipLibCheck": true,
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "types": [
-      "node"
+      "node", "jest"
     ],
     "lib": [
       "es5",
