--- a/apps/rush/package.json
+++ b/apps/rush/package.json
@@ -29,15 +29,17 @@
   "license": "MIT",
   "dependencies": {
     "@microsoft/node-core-library": "~0.3.4",
-    "colors": "~1.1.2",
-    "fs-extra": "~0.26.7"
+    "@microsoft/rush-lib": "~3.0.19",
+    "fs-extra": "~0.26.7",
+    "semver": "~5.3.0"
   },
   "devDependencies": {
     "@microsoft/node-library-build": "~4.1.2",
     "@types/chai": "3.4.34",
-    "@types/colors": "1.1.3",
+    "@types/fs-extra": "0.0.37",
     "@types/mocha": "2.2.38",
     "@types/node": "6.0.88",
+    "@types/semver": "5.3.33",
     "chai": "~3.5.0",
     "gulp": "~3.9.1"
   }
