--- a/apps/rush/tsconfig.json
+++ b/apps/rush/tsconfig.json
@@ -16,7 +16,8 @@
     "lib": [
       "es5",
       "es2015.collection",
-      "es2015.promise"
+      "es2015.promise",
+      "es2015.iterable"
     ]
   }
 }
