--- a/apps/rush/package.json
+++ b/apps/rush/package.json
@@ -40,7 +40,9 @@
     "@types/mocha": "2.2.38",
     "@types/node": "6.0.88",
     "@types/semver": "5.3.33",
+    "@types/sinon": "1.16.34",
     "chai": "~3.5.0",
-    "gulp": "~3.9.1"
+    "gulp": "~3.9.1",
+    "sinon": "~1.17.3"
   }
 }
