--- a/libraries/api-documenter/package.json
+++ b/libraries/api-documenter/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@microsoft/api-documenter",
-  "version": "0.1.6",
-  "private": true,
+  "version": "1.0.0",
   "description": "Read JSON files from api-extractor, generate documentation pages",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/web-build-tools"
   },
+  "homepage": "http://aka.ms/extractor",
   "license": "MIT",
   "scripts": {
     "build": "gulp",
