--- a/core-build/gulp-core-build-karma/package.json
+++ b/core-build/gulp-core-build-karma/package.json
@@ -39,6 +39,7 @@
     "@microsoft/node-library-build": "~4.1.5",
     "@types/gulp": "3.8.32",
     "@types/karma": "0.13.33",
+    "@types/log4js": "0.0.33",
     "@types/bluebird": "3.5.3"
   }
 }
