Enable strict-null-checks for api-extractor

--- a/apps/api-extractor/tsconfig.json
+++ b/apps/api-extractor/tsconfig.json
@@ -6,6 +6,7 @@
     "declaration": true,
     "sourceMap": true,
     "experimentalDecorators": true,
+    "strictNullChecks": true,
     "types": [
       "node"
     ],
