--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -23,11 +23,13 @@
     "@types/z-schema": "3.16.31",
     "builtins": "~1.0.3",
     "colors": "~1.1.2",
+    "encode-registry": "~1.1.0",
     "fs-extra": "~0.26.7",
     "git-repo-info": "~1.1.4",
     "glob": "~7.0.5",
     "glob-escape": "~0.0.1",
     "inquirer": "~1.2.1",
+    "js-yaml": "~3.9.1",
     "jju": "~1.3.0",
     "lodash": "~4.15.0",
     "minimatch": "~3.0.2",
@@ -47,6 +49,7 @@
     "sinon": "~1.17.3",
     "@types/colors": "1.1.3",
     "@types/glob": "5.0.30",
+    "@types/js-yaml": "3.9.1",
     "@types/lodash": "4.14.74",
     "@types/minimatch": "2.0.29",
     "@types/sinon": "1.16.34",
