--- a/apps/api-extractor/package.json
+++ b/apps/api-extractor/package.json
@@ -41,13 +41,10 @@
     "z-schema": "~3.18.3"
   },
   "devDependencies": {
-    "@types/chai": "3.4.34",
     "@types/colors": "1.1.3",
     "@types/lodash": "4.14.74",
-    "@types/mocha": "2.2.38",
-    "chai": "~3.5.0",
     "gulp": "~3.9.1",
-    "mocha": "~3.4.2",
-    "@microsoft/node-library-build": "4.2.3"
+    "@microsoft/node-library-build": "4.2.3",
+    "@types/jest": "~20.0.4"
   }
 }
