--- a/apps/api-extractor/tsconfig.json
+++ b/apps/api-extractor/tsconfig.json
@@ -8,7 +8,8 @@
     "experimentalDecorators": true,
     "strictNullChecks": true,
     "types": [
-      "node"
+      "node",
+      "jest"
     ],
     "lib": [
       "es5",
