--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -36,6 +36,7 @@
     "read-package-tree": "~5.1.5",
     "rimraf": "~2.5.4",
     "semver": "~5.3.0",
+    "strict-uri-encode": "~2.0.0",
     "tar": "~3.1.12",
     "wordwrap": "~1.0.0",
     "z-schema": "~3.18.3"
