--- a/apps/rush-lib/src/cli/utilities/test/shrinkwrapFile/shrinkwrap.yaml
+++ b/apps/rush-lib/src/cli/utilities/test/shrinkwrapFile/shrinkwrap.yaml
@@ -2,7 +2,6 @@ dependencies:
   '@rush-temp/project1': 'file:./projects/project1.tgz'
   '@rush-temp/project2': 'file:./projects/project2.tgz'
   jquery: 2.9.9
-  q: 1.5.3
 packages:
   /jquery/2.2.2:
     resolution:
@@ -10,6 +9,15 @@ packages:
   /q/1.5.3:
     resolution:
       integrity: sha1-3QG6ydBtMObyGa7LglPunr3DCPE=
+  /left-pad/9.9.9:
+    resolution:
+      integrity: sha1-3QG6ydBtMObyGa7LglPunr3DCPE=
+  'file:projects/project1.tgz':
+    dependencies:
+      jquery: 2.9.9
+  'file:projects/project2.tgz':
+    dependencies:
+      q: 1.5.3
 registry: 'http://localhost:4873/'
 shrinkwrapVersion: 3
 specifiers:
