--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -28,6 +28,7 @@
     "glob": "~7.0.5",
     "glob-escape": "~0.0.1",
     "inquirer": "~1.2.1",
+    "js-yaml": "~3.9.1",
     "jju": "~1.3.0",
     "lodash": "~4.15.0",
     "minimatch": "~3.0.2",
@@ -35,6 +36,7 @@
     "read-package-tree": "~5.1.5",
     "rimraf": "~2.5.4",
     "semver": "~5.3.0",
+    "strict-uri-encode": "~2.0.0",
     "tar": "~3.1.12",
     "wordwrap": "~1.0.0",
     "z-schema": "~3.18.3"
@@ -47,6 +49,7 @@
     "sinon": "~1.17.3",
     "@types/colors": "1.1.3",
     "@types/glob": "5.0.30",
+    "@types/js-yaml": "3.9.1",
     "@types/lodash": "4.14.74",
     "@types/minimatch": "2.0.29",
     "@types/sinon": "1.16.34",
