--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -19,7 +19,7 @@ groups:
       - nickpape-msft
       - pgonzal
       - qz2017
-      - patmill
+      - aditima
 
   api-approvers:
     conditions:
@@ -32,6 +32,7 @@ groups:
       - pgonzal
       - qz2017
       - mpasarin
+      - aditima
 
   general-approvers:
     conditions:
@@ -51,6 +52,7 @@ groups:
       - nickpape-msft
       - pgonzal
       - qz2017
+      - aditima
 
   load-themed-styles-approvers:
     conditions:
@@ -63,3 +65,4 @@ groups:
       - pgonzal
       - qz2017
       - dzearing
+      - aditima
