--- a/libraries/node-core-library/package.json
+++ b/libraries/node-core-library/package.json
@@ -20,11 +20,8 @@
     "z-schema": "~3.18.3"
   },
   "devDependencies": {
-    "@types/chai": "3.4.34",
-    "@types/mocha": "2.2.38",
-    "chai": "~3.5.0",
+    "@types/jest": "21.1.10",
     "gulp": "~3.9.1",
-    "mocha": "~3.4.2",
     "@microsoft/node-library-build": "4.3.41"
   }
 }
