--- a/libraries/node-core-library/tsconfig.json
+++ b/libraries/node-core-library/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "experimentalDecorators": true,
     "types": [
-      "node"
+      "node",
+      "jest"
     ],
     "lib": [
       "es5",
