--- a/webpack/loader-raw-script/package.json
+++ b/webpack/loader-raw-script/package.json
@@ -13,11 +13,11 @@
     "loader-utils": "~1.1.0"
   },
   "devDependencies": {
-    "@types/mocha": "2.2.38",
+    "@types/mocha": "5.2.5",
     "@types/node": "8.5.8",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
-    "mocha": "~3.4.2",
+    "mocha": "^5.2.0",
     "@microsoft/node-library-build": "4.3.50"
   }
 }
