--- a/webpack/resolve-chunk-plugin/package.json
+++ b/webpack/resolve-chunk-plugin/package.json
@@ -13,10 +13,10 @@
     "@types/webpack": "4.4.0"
   },
   "devDependencies": {
-    "@types/mocha": "2.2.38",
+    "@types/mocha": "5.2.5",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
-    "mocha": "~3.4.2",
+    "mocha": "^5.2.0",
     "@microsoft/node-library-build": "4.3.50"
   }
 }
