--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -134,6 +134,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "decomment",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "del",
       "allowedCategories": [ "libraries" ]
     },
