--- a/core-build/gulp-core-build-typescript/package.json
+++ b/core-build/gulp-core-build-typescript/package.json
@@ -21,6 +21,7 @@
     "@types/vinyl": "1.2.30",
     "decomment": "~0.9.1",
     "glob": "~7.0.5",
+    "glob-escape": "~0.0.1",
     "gulp": "~3.9.1",
     "gulp-cache": "~0.4.5",
     "gulp-changed": "~1.3.2",
