Add a workaround for Jest regression #6766

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -298,6 +298,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "jsdom",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "karma",
       "allowedCategories": [ "libraries" ]
     },
