--- a/libraries/rushell/package.json
+++ b/libraries/rushell/package.json
@@ -17,7 +17,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@microsoft/node-core-library": "~2.1.0"
+    "@microsoft/node-core-library": "2.1.0"
   },
   "devDependencies": {
     "@microsoft/node-library-build": "4.4.8",
