--- a/libraries/load-themed-styles/tsconfig.json
+++ b/libraries/load-themed-styles/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "./node_modules/@microsoft/rush-stack/includes/tsconfig-node.json"
+  "extends": "./node_modules/@microsoft/rush-stack/includes/tsconfig-web.json",
+  "compilerOptions": {
+    "module": "commonjs"
+  }
 }
