--- a/apps/rush-lib/tsconfig.json
+++ b/apps/rush-lib/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "./node_modules/@microsoft/rush-stack/includes/tsconfig-node.json"
+  "extends": "./node_modules/@microsoft/rush-stack/includes/tsconfig-node.json",
+  "include": [
+    "./typings/tsd.d.ts",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
+  ]
 }
