--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -25,6 +25,7 @@
     "tslint-microsoft-contrib": "~5.2.1",
     "@types/jest": "21.1.10",
     "gulp": "~3.9.1",
-    "@microsoft/node-library-build": "5.0.0"
+    "@microsoft/node-library-build": "5.0.2",
+    "@microsoft/rush-stack-compiler": "0.1.0"
   }
 }
