--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -27,6 +27,7 @@
     "@microsoft/ts-command-line": "4.2.2",
     "@pnpm/link-bins": "~1.0.1",
     "@pnpm/logger": "~1.0.1",
+    "@yarnpkg/lockfile": "~1.0.2",
     "builtins": "~1.0.3",
     "colors": "~1.2.1",
     "git-repo-info": "~1.1.4",
