--- a/core-build/gulp-core-build-sass/package.json
+++ b/core-build/gulp-core-build-sass/package.json
@@ -17,17 +17,17 @@
     "@microsoft/load-themed-styles": "1.8.4",
     "@types/node": "8.5.8",
     "@types/gulp": "3.8.32",
-    "autoprefixer": "6.3.7",
+    "autoprefixer": "~9.1.3",
     "gulp": "~3.9.1",
     "gulp-clean-css": "~3.0.4",
     "gulp-clip-empty-files": "~0.1.2",
     "gulp-clone": "~1.0.0",
-    "gulp-postcss": "~6.3.0",
+    "gulp-postcss": "~8.0.0",
     "gulp-sass": "~3.1.0",
     "gulp-sourcemaps": "~2.6.4",
     "gulp-texttojs": "~1.0.3",
     "merge2": "~1.0.2",
-    "postcss-modules": "~0.6.4",
+    "postcss-modules": "~1.3.1",
     "through2": "~2.0.1"
   },
   "devDependencies": {
