--- a/stack/rush-stack-compiler/includes/tsconfig-base.json
+++ b/stack/rush-stack-compiler/includes/tsconfig-base.json
@@ -8,6 +8,7 @@
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
+    "inlineSources": true,
     "experimentalDecorators": true,
     "strictNullChecks": true,
     "types": []
