--- a/libraries/ts-command-line/tsconfig.json
+++ b/libraries/ts-command-line/tsconfig.json
@@ -1,3 +1,10 @@
 {
-  "extends": "./node_modules/@microsoft/rush-stack-compiler/includes/tsconfig-node.json"
+  "extends": "./node_modules/@microsoft/rush-stack-compiler/includes/tsconfig-node.json",
+
+  "compilerOptions": {
+    "types": [
+      "jest",
+      "node"
+    ]
+  }
 }
